tests/snapshots/longs.snap
---
source: tests/snapshot.rs
expression: rust
---
#![feature(c_variadic)]
#![allow(dead_code, unused, non_camel_case_types, non_snake_case, non_upper_case_globals, arithmetic_overflow, suspicious_runtime_symbol_definitions, unpredictable_function_pointer_comparisons, unused_comparisons)]

unsafe extern "C" {
    fn printf(_0: *const i8, ...) -> i32;
}

fn ladd(arg0: i64, arg1: i64) -> i64 {
    let mut a: i64 = 0;
    let mut b: i64 = 0;
    let mut __retval: i64 = 0;
    let mut c: i64 = 0;
    a = arg0;
    b = arg1;
    let _v0: i64 = a;
    let _v1: i64 = b;
    let _v2: i64 = _v0 + _v1;
    c = _v2;
    let _v3: i64 = c;
    __retval = _v3;
    let _v4: i64 = __retval;
    return _v4;
}

fn main() {
    let mut __retval: i32 = 0;
    let mut a: i64 = 0;
    let mut ua: u64 = 0;
    let _v0: i32 = 0;
    __retval = _v0;
    let _v1: i64 = 5000000000i64;
    a = _v1;
    let _v2: u64 = 9000000000u64;
    ua = _v2;
    let _v3: *mut i8 = b"%ld\n\0".as_ptr() as *mut i8;
    let _v4: i64 = a;
    let _v5: i64 = 1;
    let _v6: i64 = ladd(_v4, _v5);
    let _v7: i32 = unsafe { printf(_v3 as *const i8, _v6) };
    let _v8: *mut i8 = b"%lu\n\0".as_ptr() as *mut i8;
    let _v9: u64 = ua;
    let _v10: i32 = unsafe { printf(_v8 as *const i8, _v9) };
    let _v11: i32 = 0;
    __retval = _v11;
    let _v12: i32 = __retval;
    std::process::exit(_v12 as i32);
}
