tests/snapshots/loop_break_continue.snap
---
source: tests/snapshot.rs
expression: rust
---
#![feature(c_variadic)]
#![allow(dead_code, unused, non_camel_case_types, non_snake_case, non_upper_case_globals, arithmetic_overflow, suspicious_runtime_symbol_definitions, unpredictable_function_pointer_comparisons, unused_comparisons)]

unsafe extern "C" {
    fn printf(_0: *const i8, ...) -> i32;
}

fn grid(arg0: i32, arg1: i32) -> i32 {
    let mut rows: i32 = 0;
    let mut cols: i32 = 0;
    let mut __retval: i32 = 0;
    let mut total: i32 = 0;
    rows = arg0;
    cols = arg1;
    let _v0: i32 = 0;
    total = _v0;
    {
        let mut r: i32 = 0;
        let _v1: i32 = 0;
        r = _v1;
        loop {
            let _v2: i32 = r;
            let _v3: i32 = rows;
            let _v4: bool = _v2 < _v3;
            if !_v4 {
                break;
            }
            {
                {
                    let mut c: i32 = 0;
                    let _v5: i32 = 0;
                    c = _v5;
                    '__loop0: loop {
                        let _v6: i32 = c;
                        let _v7: i32 = cols;
                        let _v8: bool = _v6 < _v7;
                        if !_v8 {
                            break;
                        }
                        '__continue0: {
                            {
                                {
                                    let _v9: i32 = c;
                                    let _v10: i32 = r;
                                    let _v11: bool = _v9 == _v10;
                                    if _v11 {
                                        break '__continue0;
                                    }
                                }
                                {
                                    let _v12: i32 = c;
                                    let _v13: i32 = 4;
                                    let _v14: bool = _v12 > _v13;
                                    if _v14 {
                                        break '__loop0;
                                    }
                                }
                                let _v15: i32 = r;
                                let _v16: i32 = cols;
                                let _v17: i32 = _v15 * _v16;
                                let _v18: i32 = c;
                                let _v19: i32 = _v17 + _v18;
                                let _v20: i32 = total;
                                let _v21: i32 = _v20 + _v19;
                                total = _v21;
                            }
                        }
                        let _v22: i32 = c;
                        let _v23: i32 = _v22 + 1;
                        c = _v23;
                    }
                }
                {
                    let _v24: i32 = r;
                    let _v25: i32 = 6;
                    let _v26: bool = _v24 > _v25;
                    if _v26 {
                        break;
                    }
                }
            }
            let _v27: i32 = r;
            let _v28: i32 = _v27 + 1;
            r = _v28;
        }
    }
    let _v29: i32 = total;
    __retval = _v29;
    let _v30: i32 = __retval;
    return _v30;
}

fn main() {
    let mut __retval: i32 = 0;
    let _v0: i32 = 0;
    __retval = _v0;
    let _v1: *mut i8 = b"%d\n\0".as_ptr() as *mut i8;
    let _v2: i32 = 8;
    let _v3: i32 = 8;
    let _v4: i32 = grid(_v2, _v3);
    let _v5: i32 = unsafe { printf(_v1 as *const i8, _v4) };
    let _v6: *mut i8 = b"%d\n\0".as_ptr() as *mut i8;
    let _v7: i32 = 3;
    let _v8: i32 = 3;
    let _v9: i32 = grid(_v7, _v8);
    let _v10: i32 = unsafe { printf(_v6 as *const i8, _v9) };
    let _v11: i32 = 0;
    __retval = _v11;
    let _v12: i32 = __retval;
    std::process::exit(_v12 as i32);
}
