tests/snapshots/mem_bcopy_overlap.snap
---
source: tests/snapshot.rs
expression: rust
---
#![feature(c_variadic)]
#![allow(dead_code, unused, non_camel_case_types, non_snake_case, non_upper_case_globals, arithmetic_overflow, suspicious_runtime_symbol_definitions, unpredictable_function_pointer_comparisons, unused_comparisons)]

unsafe extern "C" {
    fn printf(_0: *const i8, ...) -> i32;
}

fn main() {
    let mut __retval: i32 = 0;
    let mut buf: [i8; 8] = [0; 8];
    let _v0: i32 = 0;
    __retval = _v0;
    buf = [1, 2, 3, 4, 5, 6, 7, 8];
    let _v1: *mut i8 = buf.as_mut_ptr() as *mut i8;
    let _v2: *mut core::ffi::c_void = _v1 as *mut core::ffi::c_void;
    let _v3: *mut i8 = buf.as_mut_ptr() as *mut i8;
    let _v4: i32 = 2;
    let _v5: *mut i8 = unsafe { _v3.add(2) };
    let _v6: *mut core::ffi::c_void = _v5 as *mut core::ffi::c_void;
    let _v7: u64 = 4;
    unsafe { std::ptr::copy(_v2 as *const u8, _v6 as *mut u8, _v7 as usize) };
    {
        let mut i: i32 = 0;
        let _v8: i32 = 0;
        i = _v8;
        loop {
            let _v9: i32 = i;
            let _v10: i32 = 8;
            let _v11: bool = _v9 < _v10;
            if !_v11 {
                break;
            }
            let _v12: *mut i8 = b"%d \0".as_ptr() as *mut i8;
            let _v13: i32 = i;
            let _v14: i64 = _v13 as i64;
            let _v15: i8 = buf[(_v14 as usize)];
            let _v16: i32 = _v15 as i32;
            let _v17: i32 = unsafe { printf(_v12 as *const i8, _v16) };
            let _v18: i32 = i;
            let _v19: i32 = _v18 + 1;
            i = _v19;
        }
    }
    let _v20: *mut i8 = b"\n\0".as_ptr() as *mut i8;
    let _v21: i32 = unsafe { printf(_v20 as *const i8) };
    let _v22: i32 = 0;
    __retval = _v22;
    let _v23: i32 = __retval;
    std::process::exit(_v23 as i32);
}
