tests/snapshots/mem_bitcast_copy.snap
---
source: tests/snapshot.rs
expression: rust
---
#![feature(c_variadic)]
#![allow(dead_code, unused, non_camel_case_types, non_snake_case, non_upper_case_globals, arithmetic_overflow, suspicious_runtime_symbol_definitions, unpredictable_function_pointer_comparisons, unused_comparisons)]

#[repr(C)]
#[derive(Clone, Copy)]
struct Bits {
    a: u32,
    b: u32,
}


#[repr(C)]
#[derive(Clone, Copy)]
struct Pair {
    x: i32,
    y: i32,
}


unsafe extern "C" {
    fn printf(_0: *const i8, ...) -> i32;
}

fn main() {
    let mut __retval: i32 = 0;
    let mut p: Pair = Pair { x: 0, y: 0 };
    let mut b: Bits = Bits { a: 0, b: 0 };
    let _v0: i32 = 0;
    __retval = _v0;
    p = Pair { x: 7, y: 9 };
    let _v1: *mut core::ffi::c_void = std::ptr::addr_of_mut!(p) as *mut core::ffi::c_void;
    let _v2: *mut core::ffi::c_void = std::ptr::addr_of_mut!(b) as *mut core::ffi::c_void;
    let _v3: u64 = 8;
    unsafe { std::ptr::copy_nonoverlapping(_v1 as *const u8, _v2 as *mut u8, _v3 as usize) };
    let _v4: *mut i8 = b"%u %u\n\0".as_ptr() as *mut i8;
    let _v5: u32 = b.a;
    let _v6: u32 = b.b;
    let _v7: i32 = unsafe { printf(_v4 as *const i8, _v5, _v6) };
    let _v8: i32 = 0;
    __retval = _v8;
    let _v9: i32 = __retval;
    std::process::exit(_v9 as i32);
}
